pkg/function-deployment-webhook/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: kube-system
  name: function-deployment-custom-scheduler
  labels:
    app: function-deployment-custom-scheduler
spec:
  ports:
    - port: 8443
  selector:
    app: function-deployment-custom-scheduler
