pkg/function-deployment-webhook/deploy/admission-registration-subst.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: "kube-system.function-deployment-custom-scheduler.svc"
webhooks:
  - name: "kube-system.function-deployment-custom-scheduler.svc"
    rules:
      - apiGroups: ["*"]
        apiVersions: ["*"]
        operations: ["CREATE", "UPDATE"]
        resources: ["deployments"]
        scope: "Namespaced"
    clientConfig:
      service:
        namespace: kube-system
        name: function-deployment-custom-scheduler
        path: /mutate
        port: 8443
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUN5RENDQWJDZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwcmRXSmwKY201bGRHVnpNQjRYRFRJeE1EY3lPVEl6TXpVeE0xb1hEVE14TURjeU56SXpNelV4TTFvd0ZURVRNQkVHQTFVRQpBeE1LYTNWaVpYSnVaWFJsY3pDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTnN0CkZ0dWREWEpZV2loaEQyZ1dVV0pheGJsVWhXY3pFK3FJb0s1Y2xnWVA1TFFhd1JBQld1S3BLY3g2R1Q0WjlCZlIKcGxobmZQd1lxTmthb0VjQW9NYkRSa0V2Qms5V2JHd0w5TFZNeiszdnU1S0tzeURmUTNvMFdnbWEvSkxSUHVHZQo5QS83dE1EaUVN [...]
    admissionReviewVersions: ["v1", "v1beta1"]
    sideEffects: NoneOnDryRun
    timeoutSeconds: 5
