pkg/function-deployment-webhook/deploy/admission-registration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: "openfaas-fn.function-deployment-custom-scheduler.svc"
webhooks:
  - name: "openfaas-fn.function-deployment-custom-scheduler.svc"
    rules:
<<<<<<< HEAD
      - apiGroups:   ["*"]
        apiVersions: ["*"]
=======
      - apiGroups:   [""]
        apiVersions: ["v1"]
>>>>>>> feat: partial features
        operations:  ["CREATE", "UPDATE"]
        resources:   ["deployments"]
        scope:       "Namespaced"
    clientConfig:
      service:
        namespace: openfaas-fn
        name: function-deployment-custom-scheduler
        path: /mutate
        port: 8443
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUN5RENDQWJDZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwcmRXSmwKY201bGRHVnpNQjRYRFRJeE1EWXhNREUwTlRZMU4xb1hEVE14TURZd09ERTBOVFkxTjFvd0ZURVRNQkVHQTFVRQpBeE1LYTNWaVpYSnVaWFJsY3pDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBSzZuClRTNXdiWFhQM0tiMjVCMnNTUjhvY2IzV0ZqTXdEbXQ0bkNVOHlFZ3R6V05zaWd4d0c2NjF3UjdJYktUQXdyTEEKRHJOOEwyZHZSRlRXbVExMThFZk1FMXB6N2h1Uk5FbUUzclFiaDZTc3RFSlBvVjkxdGJ3ZGNtd2pHTC9xOWlYdAp3Y2ZYN1QxWGVM [...]
    admissionReviewVersions: ["v1", "v1beta1"]
    sideEffects: Some
    timeoutSeconds: 5
